tests/fail/d006_not_a_function.dew
# D006: type mismatch — expected function, found Int
def main = fn () {
    42(0)
}
